# cl-embedded

./: .gitignore  CLAUDE.md  README.md  pipeline_network_diagram.html  pyproject.toml  requirements.txt
configs/: battery_config.yaml  battery_single_task_config.yaml  cwru_by_fault_config.yaml  cwru_by_severity_config.yaml  cwru_single_task_config.yaml  dbscan_pronostia_by_condition_config.yaml  dbscan_pronostia_single_task_config.yaml  ewc_config.yaml  ewc_pronostia_by_condition_config.yaml  ewc_pronostia_single_task_config.yaml  ewc_pump_config.yaml  ewc_single_task_monitoring_config.yaml  hdc_anomaly_detection_config.yaml  hdc_base_vectors.npz  hdc_base_vectors_cwru.npz  hdc_base_vectors_pronostia.npz  hdc_config.yaml  hdc_pronostia_by_condition_config.yaml  hdc_pronostia_single_task_config.yaml  hdc_pump_base_vectors.npz  hdc_pump_config.yaml  kmeans_pronostia_by_condition_config.yaml  kmeans_pronostia_single_task_config.yaml  mahalanobis_pronostia_by_condition_config.yaml  mahalanobis_pronostia_single_task_config.yaml  monitoring_by_location_config.yaml  monitoring_normalizer.yaml  monitoring_normalizer_anomaly.yaml  monitoring_single_task_config.yaml  pronostia_config.yaml  pronostia_normalizer.yaml  pronostia_single_task_config.yaml  pump_by_id_config.yaml  pump_by_temporal_window_config.yaml  pump_normalizer.yaml  pump_single_task_config.yaml  tinyol_anomaly_detection_config.yaml  tinyol_config.yaml  tinyol_monitoring_config.yaml  tinyol_pronostia_by_condition_config.yaml  (+3 more)
docs/: architecture.md  datasets_analysis.md  roadmap.md  roadmap_phase1.md  triple_gap.md  (+1 more)
(+664 files in other folders)
